Fix spacing on room cards in dom

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -62,6 +62,7 @@ img {
     color: $primary-text-color;
     font-size: 30px;
     gap: 3%;
+    margin-bottom: 7%;
     padding-bottom: 2%;
     position: relative;
     text-align: center;
